# byte-bond

./: .env.dev.example  .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  biome.json  pyproject.toml
.github/workflows/: lint.yaml
containers/: Dockerfile  docker-compose.dev.yaml  docker-compose.infra.yaml  docker-compose.prod.yaml  entrypoint.sh
containers/nginx/: Dockerfile  nginx.conf
containers/nginx/conf.d/: app.conf
migrations/versions/: 2025-07-25_initial_2ddc40e70b73.py  2025-08-08_update_constraint_59acea548659.py  2025-08-21_add_options_column_072946ee5fef.py  2025-08-21_add_question_type_aeb3756626ac.py
src/backend/: __main__.py  cli.py  config.py  main.py  models.py  settings.py
src/backend/controllers/: auth.py  connection.py  event.py  frontend.py  game.py  note.py  question.py  user.py  user_answer.py
src/backend/lib/: admin.py  dependencies.py  game.py  otel.py  rate_limit.py  services.py  utils.py
src/backend/schema/: auth.py  connection.py  event.py  game.py  note.py  question.py  user.py  user_answer.py
src/frontend/: eslint.config.js  index.html  openapi-ts.config.ts  openapi.json  package-lock.json  package.json  vite.config.ts
src/frontend/src/: index.css  main.tsx  routeTree.gen.ts
src/frontend/src/client/: sdk.gen.ts  types.gen.ts
src/frontend/src/components/: navbar.tsx  theme-context.tsx  user-context.tsx
src/frontend/src/components/ui/: alert.tsx  avatar.tsx  checkbox.tsx  dialog.tsx  drawer.tsx  navigation-menu.tsx
src/frontend/src/lib/: available.tsx  busy.tsx  connecting.tsx
src/frontend/src/routes/: __root.tsx  _admin.tsx  _app.tsx  index.tsx  login.tsx  onboarding.tsx
src/frontend/src/routes/_admin/: leaderboard.tsx  manage.tsx
src/frontend/src/routes/_app/: dashboard.tsx
